--- a/20240212144646-probability_theory_and_statistics_114.sync-conflict-20240511-125732-J6NJZDX.org
+++ b/20240212144646-probability_theory_and_statistics_114.sync-conflict-20240511-125732-J6NJZDX.org
@@ -3,39 +3,34 @@
 :END:
 #+title: Probability Theory and Statistics 114
 
-* Resources
-** :TEXTBOOK:
-** Lecturer: Prof. Willie Brink
-
-* Course
-** Week 1 :tut1:tut1mem:
-*** Lecture 1 :w1l1:
-**** [[id:acdaaefc-3e5c-4bbb-bf05-40fe6de963c9][The Basic Principle of Counting]]
-*** Lecture 2 :w1l2:
-**** [[id:ec3693ee-4076-4d1e-a833-97300629d151][Permutations]]
-*** Lecture 3 :w1l3:
-**** [[id:191ab052-9880-4ccb-be2d-85e052fe32bc][Combinations]]
-** Week 2 :tut2:tut2mem:
-*** Lecture 4 :w2l4:
-**** [[id:10b7d095-6ee4-4b1b-94a4-5f24fb09763e][Multinomial Coefficients]]
-*** Lecture 5 :w2l5:
-**** [[id:33838eb4-aa50-4794-baa1-637ddea744ad][Sample Spaces and Events]]
-*** Lecture 6 :w2l6:
-**** [[id:dc5f0d7c-34f1-46fc-bfe8-9f159ecd189c][Axioms of Probability]]
-**** [[id:f9192a67-8de6-484c-8a43-091ce706555a][Laws of Sets]]
-** Week 3 :tut3:tut3mem:
-*** Lecture 7 :w3l7:
-**** [[id:19940836-dd0f-489c-b047-98eee71bb40a][Propositions of Probability]]
-*** Lecture 8 :w3l8:
-**** [[id:e24fd5f1-d6ad-4f21-bfb2-6b17c8262edb][Sample Spaces with Equally Likely Outcomes]]
-*** Lecture 9 :w3l9:
-**** Examples
-*** Lecture 10 :w3l10:
-**** Problems
-** Week 4 :tut4:tut4mem:
-*** Lecture 11 :w4l11:
-**** [[id:f1ee3d2c-a8cd-4f79-8153-e8268be284d5][Conditional Probability]]
-*** Lecture 12 :w4l12:
-**** [[id:116e901f-b06c-4ab7-9793-6f1445edac41][Multiplication Rule]]
-**** [[id:57884b57-bec0-4369-88e5-0af24fe9cc58][Bayes's Formula]]
-** Week 5
+* Week 1 :tut1:tut1mem:
+** Lecture 1 :w1l1:
+*** [[id:acdaaefc-3e5c-4bbb-bf05-40fe6de963c9][The Basic Principle of Counting]]
+** Lecture 2 :w1l2:
+*** [[id:ec3693ee-4076-4d1e-a833-97300629d151][Permutations]]
+** Lecture 3 :w1l3:
+*** [[id:191ab052-9880-4ccb-be2d-85e052fe32bc][Combinations]]
+* Week 2 :tut2:tut2mem:
+** Lecture 4 :w2l4:
+*** [[id:10b7d095-6ee4-4b1b-94a4-5f24fb09763e][Multinomial Coefficients]]
+** Lecture 5 :w2l5:
+*** [[id:33838eb4-aa50-4794-baa1-637ddea744ad][Sample Spaces and Events]]
+** Lecture 6 :w2l6:
+*** [[id:dc5f0d7c-34f1-46fc-bfe8-9f159ecd189c][Axioms of Probability]]
+*** [[id:f9192a67-8de6-484c-8a43-091ce706555a][Laws of Sets]]
+* Week 3 :tut3:tut3mem:
+** Lecture 7 :w3l7:
+*** [[id:19940836-dd0f-489c-b047-98eee71bb40a][Propositions of Probability]]
+** Lecture 8 :w3l8:
+*** [[id:e24fd5f1-d6ad-4f21-bfb2-6b17c8262edb][Sample Spaces with Equally Likely Outcomes]]
+** Lecture 9 :w3l9:
+*** Examples
+** Lecture 10 :w3l10:
+*** Problems
+* Week 4 :tut4:tut4mem:
+** Lecture 11 :w4l11:
+*** [[id:f1ee3d2c-a8cd-4f79-8153-e8268be284d5][Conditional Probability]]
+** Lecture 12 :w4l12:
+*** [[id:116e901f-b06c-4ab7-9793-6f1445edac41][Multiplication Rule]]
+*** [[id:57884b57-bec0-4369-88e5-0af24fe9cc58][Bayes's Formula]]
+* Week 5
