--- a/20240906183007-matrices.org
+++ b/20240906183007-matrices.org
@@ -1,7 +1,7 @@
 :PROPERTIES:
 :ID:       a3e5a759-ca7d-46e2-a390-c3cb8f1cc823
 :END:
-#+title: Matrices
+#+title: Matrix
 #+filetags: linear_algebra matrices
 
 * Definition
