--- a/20250209192427-computer_science_214.org
+++ b/20250209192427-computer_science_214.org
@@ -2,3 +2,10 @@
 :ID:       720aa1ed-7d13-4a25-ad9f-9f188c7cbb15
 :END:
 #+title: Computer Science 214
+
+* Week 1
+** Lecture 1
+*** [[id:9cc0f923-335d-46c7-a19b-0026da6ce0c5][Union-find]]
+** Lecture 2
+*** [[id:1d69c29d-2fa6-4db2-8900-70c38d86fc2a][Insertion Sort]]
+*** [[id:b976162b-ee7b-49ae-8e61-decd4f20673e][Selection Sort]]
