--- a/20240301082717-functions.org
+++ b/20240301082717-functions.org
@@ -1,7 +1,7 @@
 :PROPERTIES:
 :ID:       87d42439-b03b-48be-84ab-2215b4733dd7
 :END:
-#+title: Functions
+#+title: Function
 #+filetags: functions
 
 * Definition
