--- a/20250222160922-kruskal_s_algorithm.org
+++ b/20250222160922-kruskal_s_algorithm.org
@@ -4,11 +4,14 @@
 #+title: Kruskal's Algorithm
 #+filetags: algorithm
 
-* Algorithm
-+ *Input:* A connected, weighted [[id:6bc62b33-2126-4f09-a380-3b05d6efa5c2][graph]] \(G\) of order \(n\)
-+ *Output:* A [[id:01582307-9087-42a9-a21b-002030e8d6e5][Minimum Spanning Tree]] \(\langle S \rangle_{G}\) of \(G\) with \(S\subseteq E(G)\)
+* Input
+A connected, weighted [[id:6bc62b33-2126-4f09-a380-3b05d6efa5c2][graph]] \(G\) of order \(n\)
 
-  1. \(A \leftarrow \varnothing\)
-  2. Let \(e\) be the edge \(E\setminus S\) with minimum weight, such that \(S \cup \{e\}\) does not contain a cycle.
-     Then, \(S \leftarrow S\cup \{e\}\)
-  3. If \(|S| = n-1\), stop, otherwise go to Step 2.
+* Ouput
+A [[id:01582307-9087-42a9-a21b-002030e8d6e5][Minimum Spanning Tree]] \(\langle S \rangle_{G}\) of \(G\) with \(S\subseteq E(G)\)
+
+* Algorithm
+1. \(A \leftarrow \varnothing\)
+2. Let \(e\) be the edge \(E\setminus S\) with minimum weight, such that \(S \cup \{e\}\) does not contain a cycle.
+   Then, \(S \leftarrow S\cup \{e\}\)
+3. If \(|S| = n-1\), stop, otherwise go to Step 2.
