--- a/20241004141934-volume.org
+++ b/20241004141934-volume.org
@@ -5,16 +5,24 @@
 #+filetags: calculus
 
 * Definition
-#+begin_quote
 Let \(S\) be a solid that lies between \(x=a\) and \(x=b\).
 If the cross-sectional [[id:6354ad65-7506-464e-9451-22ae114d9fa1][area]] of \(S\) in the [[id:add8a012-7e54-4e3f-b115-1d23caeb9981][plane]] \(P_x\), through \(x\) and perpendicular to the \(x\)-axis, is \(A(x)\), where \(A\) is a [[id:9f66f38c-1072-4146-9efe-5a90f984d480][continuous]] [[id:87d42439-b03b-48be-84ab-2215b4733dd7][function]], then the *volume* of \(S\) is the following [[id:7256d12e-eb3d-48d1-8f12-7168c6fe8522][integral]]
+
 \begin{equation*}
 V = \lim_{n \to \infty} \sum_{i=1}^n A(x_i^{*}) \Delta x = \int_a^{b} A(x) \, dx
 \end{equation*}
-#+end_quote
+
 [[file:images/volume.png]]
 
 * Volumes of Solids of Revolution
 If we revolve a function \(f(x)\) about a line, we obtain a *solid of revolution*.
-In this case \(A(x) = \pi f(x)^2\)
+In this case \(A(x) = \pi f(x)^2\).
 
+* Volumes of Solids Above Rectangles
+If \(f(x,y) \ge 0\), then the [[id:fbd04568-95d7-4060-a639-515de38012fb][volume]] \(V\) of the solid that lies above the [[id:fae4f08a-0750-490c-82dd-231781b77446][rectangle]] \(R = [a,b] \times [c,d]\) and below the [[id:d0e97de7-63ba-4b6f-b393-59e085c3a526][surface]] \(z = f(x,y)\) is the [[id:386ffc68-d175-4899-9e9f-bc4add5a5f15][double integral]]
+
+\begin{equation*}
+V = \iint_{R} f(x,y) \, dA
+\end{equation*}
+
+In this case \(A(x,y) = \int_c^d f(x,y) \, dy\).
