--- a/20240428011350-integration.org
+++ b/20240428011350-integration.org
@@ -1,23 +1,22 @@
 :PROPERTIES:
 :ID:       7256d12e-eb3d-48d1-8f12-7168c6fe8522
+:ROAM_ALIASES: "Integral" "Definite Integral"
 :END:
 #+title: Integration
 #+filetags: calculus integration
 
 * Riemann Sum Definition
-#+begin_quote
 Let \(f\) be a function defined on an interval \([a,b]\).
 Divide \([a,b]\) into subintervals of equal width \(\Delta x = \frac{b-a}{n}\).
 Let \(x_i = a, x_1, x_2,\cdots,x_n=b\) be the endpoints of the subintervals, and let \(x_1^{*}, x_2^{*}, x_n^{*}\) be any sample points so that \(x_i^{*}\in [x_{i-1}, x_{i}]\).
-Then the definite integral of \(f\) from \(a\) to \(b\) is
+Then the *definite integral* of \(f\) from \(a\) to \(b\) is
 
 \begin{equation*}
 \int_a^{b}f(x) \, dx = \lim_{n\to\infty}\sum_{i=1}^nf(x_i^{*})\Delta x
 \end{equation*}
 
-provided that this limit exists and gives some value for all possible choices of sample points.
+provided that this [[id:6ffde4e8-a12d-4c3a-bc24-675b5a38433c][limit]] exists and gives some value for all possible choices of sample points.
 If it does, we say that \(f\) is *integrable* on \([a,b]\).
-#+end_quote
 
 * Areas and Distances
 [[file:images/area.pdf]]
