--- a/20240901160229-algebraic_properties_of_vectors.org
+++ b/20240901160229-algebraic_properties_of_vectors.org
@@ -9,5 +9,5 @@
 * Additive [[id:1a59f45c-c849-40c5-82e2-48b95050eecb][Identity Element]]
 \(\vec{u} + \vec{0} = \vec{u}\)
 * Additive [[id:19ce9aa6-cd43-49ec-85c4-a5b0fadadca6][Inverse Element]]
-\(\vec{u} + (-\vec{u} = \vec{0}\)
+\(\vec{u} + (-\vec{u}) = \vec{0}\)
 * [[id:441fae62-367a-4c7e-9c2c-3df0d1132fe7][Distributive Property]]
